client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Tsukimi+Rounded:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap');

.home-body {
    background-image: "forest-background.jpg";
}

.home-body {
    background-image: url("forest-background.jpg");
    background-size: cover;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    /* flex-wrap: wrap; */
}

.profile-body {
    background-image: url("forest-background.jpg");
    background-size: 100%;
    /* height: 100vh; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    /* flex-wrap: wrap; */
}

span {
    display: flex;
    align-items: center;
}

.logo {
    display: flex;
    align-items: center;
    font-size: 35px;
    font-family: 'Tsukimi Rounded', sans-serif;
    color: #487652b3;

}

.logo-text {
    display: flex;
    align-items: flex-end;
    font-weight: 15;
}

.logo-text>span {
    position: relative;
}

.animation-container {
    position: relative;
    z-index: 1;
    width: 70px;
    height: 100px;
    margin-bottom: 0px;
}

.logo-text>span:first-child {
    margin-right: -25px;
    z-index: 2;
}

.logo-text>span:last-child {
    margin-left: -32px;
    z-index: 2;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    text-align: center;
    font-family: 'Josefin Sans', sans-serif;
    font-size: x-large;
    padding: 0;
    background-color: #849c8c85;
}

.nav-1 {
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;

}

.nav-1 li {
    margin-right: 40px;
}

#nav-font {
    text-decoration: none;
    color: inherit;
}

.login-signup {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: 'Josefin Sans', sans-serif;
    text-align: center;
    background-color: #4876522c;
    margin-left: 70vh;
    margin-right: 70vh;
}


#airiq-widget {
    background-color: white;
}

